# musical-umbrella

./: Dockerfile  docker-compose.yml  pyproject.toml
src/netmon/: __init__.py  alerts.py  cli.py  conflicts.py  docker_client.py  monitor.py  scanner.py  visualizer.py  web.py
src/netmon/static/: app.js  graph.js  style.css
src/netmon/templates/: dashboard.html
tests/: __init__.py
