[project]
name = "docker-netmon"
version = "0.1.0"
description = "Docker network monitor - detect DNS conflicts and visualize network topology"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "flask>=3.0.0",
]

[project.scripts]
netmon = "netmon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/netmon"]
include = [
    "src/netmon/templates/*",
    "src/netmon/static/*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
